chore: update toss unlock price label to 550

--- a/handoff/context_2026-02-10_23-00.md
+++ b/handoff/context_2026-02-10_23-00.md
@@ -54,3 +54,7 @@
 - GitHub: MichaelCho-haman/ai-naming
 - Vercel: ai-naming-pa5z
 - Supabase: 기존 saju-web과 같은 프로젝트 (namings 테이블)
+
+## 결제 보안 재점검 메모
+- 결제 관련 코드/설정 변경 시 아래 문서를 먼저 확인하고 위험성 재언급
+- `/Users/seonghwancho/Desktop/saju/docs/ai-naming-payment-security-watch.md`
